# llm-base

./: .env.example  main.py  pyproject.toml  settings.py
llm_cli/: __init__.py  cli.py
llm_cli/clients/: __init__.py  openai_client.py
llm_cli/prompts/: __init__.py  search_assistant.md
llm_cli/tools/: __init__.py  registry.py  search.py  web.py
